[package]
name = "deduplicator"
version = "0.1.0"
authors = ["Naughty <dorminsama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.19"
structopt = "0.3.21"
walkdir = "2.3.1"
threadpool = "1.8.1"
ansi-escapes = "0.1.0"
ctrlc = "3.1.8"
